tests/invalid/error_08.robot
// error_08: [SINTÁCTICO] Comparador inválido !=
sensor velocidad;
rutina main() {
    si velocidad != 0:
        ejecutar mover();
}
